[package]
name = "firebase"
version = "0.10.0"
description = "Rust library for working with Firebase"
readme = "README.md"
repository = "https://github.com/Phrohdoh/firebase-rs"
documentation = "http://icanteden.com/rust-firebase/firebase/index.html"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>", "Michael Eden <themichaeleden@gmail.com>", "Taryn Hill <Phrohdoh@gmail.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api"]

[dependencies]
# TODO: This is temporary! (waiting for https://github.com/servo/rust-url/pull/223 to land)
url = { git = "git@github.com:Phrohdoh/rust-url.git" }
curl = "0.2.19"
rustc-serialize = "0.3.19"
