[package]
name = "firebase"
version = "0.12.1"
description = "Rust library for working with Firebase"
readme = "README.md"
repository = "https://github.com/Phrohdoh/firebase-rs"
documentation = "http://icanteden.com/rust-firebase/firebase/index.html"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>", "Michael Eden <themichaeleden@gmail.com>", "Taryn Hill <Phrohdoh@gmail.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api"]

[dependencies]
url = "1.2.1"
hyper = "0.10"
rustc-serialize = "0.3.19"
